<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_winner_scene"
    app:showPaths="false">

    <ImageView
        android:id="@+id/iv_bg_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_space2"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/iv_winner"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:contentDescription="@string/winner_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_bg_winner"
        app:srcCompat="@drawable/winner_list"
        tools:src="@drawable/computer_win" />

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_winner"
        tools:text="Победитель" />

    <TextView
        android:id="@+id/tv_winner_speech"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="64dp"
        android:textSize="18sp"
        android:text="@string/computer_win_speech"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_winner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>